[package]
name = "nutek_crt_sh"
version = "0.1.2"
edition = "2021"
categories = ["command-line-interface"]
description = "Get list of subdomain names for an address from crt.sh website"
license = "MIT"
repository = "https://github.com/nutek-terminal/nutek_crt_sh"
authors = ["Szymon Błaszczyński <museyoucoulduse@gmail.com>"]
readme = "README.md"
keywords = ["osint", "recon", "subdomain", "terminal", "cli", "command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.1.4", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
